--- a/menuDesafio/menuHorizontal.html
+++ b/menuDesafio/menuHorizontal.html
@@ -17,9 +17,9 @@
     <div class="container">
         <div class="fundo">
             <ul>
-                <li>Todos os produtos</li>
+                <li>Todos os Produtos</li>
                 <li>Caixas e Embalagens</li>
-                <li>Adeseivos</li>
+                <li>Adesivos</li>
                 <li>Pôster</li>
                 <li>Pastas</li>
                 <li>Display</li>
